Correcting horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
       /* horizontal centering */
       align-items: center;
       /* vertical centering */
-      width: 100%;
+      width: 93vw;
       height: 98vh;
       /* make parent full height of viewport */
       
